Correction input non visible

--- a/planete.css
+++ b/planete.css
@@ -19,8 +19,8 @@ input
 {
   margin-top : 0.1em;
   margin-bottom : 0.1em;
-  width : 15%;
-  height : 10%;
+  margin-left: 15%;
+  margin-right: 10px;
   color : black;
 }
 
